# gamedev

./: .gitignore  README.md
pong/: CMakeLists.txt  Makefile  notes.txt
pong/media/macos/: Info.plist  macos.entitlements
pong/media/maps/: cursor.tsx  title_screen.tmx
pong/scripts/: sign.sh
pong/src/: Opponent.cpp  Opponent.hpp  Player.cpp  Player.hpp  WinLoseScene.cpp  WinLoseScene.hpp  ball.cpp  ball.hpp  customEventManager.hpp  gameplayScene.cpp  gameplayScene.hpp  logger.hpp  main.cpp  pathutils.cpp  pathutils.hpp  pong.cpp  pong.hpp  sceneFactory.hpp  sceneInterface.hpp  score.cpp  score.hpp  titleScene.cpp  titleScene.hpp
spaceInvaders/: CMakeLists.txt  Dockerfile  Makefile  notes.txt
spaceInvaders/internal/: index.html
spaceInvaders/media/images/: alien.aseprite  background.aseprite  background_tiles.aseprite  cursor.aseprite  green_tile.aseprite  laser.aseprite  player.aseprite
spaceInvaders/media/maps/: cursor.tsx  title_screen.tmj  title_screen.tmx
spaceInvaders/src/: backgroundTile.cpp  backgroundTile.hpp  eventManager.hpp  font.hpp  gameplayScene.cpp  gameplayScene.hpp  globals.hpp  main.cpp  music.hpp  sceneFactory.hpp  sceneInterface.hpp  sound.hpp  surface.hpp  texture.hpp  titleScene.cpp  titleScene.hpp  videomode.cpp  videomode.hpp
